=== rmw ChangeLog ===

-- Aug. 24, 2016 --

Adding more error checks

Adding more comments

More (minor) code optimization

-- Aug. 23, 2016 --

Files below protected directories are now protected (not thoroughly tested yet)

I deleted 3 functions and moved their contents to main():
*remove_to_waste()
*pre_rmw_check()
*isProtected()

WASTE directories and the rmw data/config dir is protected by default;
no need to add a separate PROTECT entry to the rmw config file

'function_prototypes.h' renamed to 'primary_funcs.c'

-- Aug. 22, 2016 --

Fine-tuning the error-checking.
https://github.com/andy5995/rmw/issues/13


-- Aug. 20, 2016 --

Added a bunch of error checking, mostly for things that rarely go wrong;
but now if they go wrong, the user (or me) will get to see an error number.

There is still a lot more error-checking that can be added.


-- Aug. 17, 2016 --

Documentation (README) updated and expanded, info added to --help option
(There is no 'man' page yet.

Fixed -B bug (https://github.com/andy5995/rmw/issues/9)

-- Aug. 16, 2016

Added a lot more error-checking to rmdir_recursive() (basically I re-wrote
most of the function).

The most annoying problem I've had with rmw over the last few years is
if there are non-writeable files in a directory that is getting purged.
I'd always get the message "unknown error while removing..." Now it's more
specific.

RMDIR_MAX_DEPTH now used. rmdir_recursive() won't go deeper than the
number set in the header file (normally set to 32)

PROTECT= option implemented, but hasn't gone through very much testing yet.
It seems to have a problem if rmw is started with
'HOME=. rmw'. The problem is that the correct realpath isn't returned, so
a match is never made, and therefore protection is ignored.


-- Aug. 11, 2016

Issue #5 implemented
https://github.com/andy5995/rmw/issues/5

Added some pointers, dispatched more globals


-- August 09, 2016

Trying to simplify things, I removed the --add-waste (a) option. I don't